<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="492dp"
        android:layout_height="771dp"
        android:contentDescription="@string/todo"
        android:fadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_screen" />

    <Button
        android:id="@+id/set01"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/henny_penny"
        android:text="@string/set01"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/set02"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/henny_penny"
        android:text="@string/set02"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/set03"
        android:layout_width="333dp"
        android:layout_height="79dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/henny_penny"
        android:text="@string/set03"
        android:textColorHighlight="@color/button03_color"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.437" />
</androidx.constraintlayout.widget.ConstraintLayout>
